--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
         
         </p>
-        <img width ="400px" height ="250px" src="https://media2.riverfronttimes.com/riverfronttimes/imager/u/blog/11182542/throwback0208107.webp?cb=1733513527">
+        <img width ="400px" height ="250px" src="https://i.ytimg.com/vi/HrpFC_Fd4mI/maxresdefault.jpg">
         <p>  </p>
 
     <p> Weight Watchers Liver Pate</p>
